[package]
name = "terrain01"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.11"}
image = "0.24.6"
noise = "0.8.2"

# Optimizations to speed up compilation in debug mode
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
